--- a/index.html
+++ b/index.html
@@ -6,5 +6,29 @@
     <title>TOP: Sign-up Form</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main">
+      <div class="logo">
+        <div class="logo-title">
+          <img src="./img/odin-lined.png" alt="odin-lined" />
+          <h1>ODIN</h1>
+        </div>
+        <div class="logo-footer">
+          Photo by
+          <a
+            href="https://unsplash.com/ko/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+          >
+            Halie West
+          </a>
+          on
+          <a
+            href="https://unsplash.com/ko/%EC%82%AC%EC%A7%84/%ED%81%B4%EB%A1%9C%EC%A6%88%EC%97%85-%EC%82%AC%EC%A7%84%EC%9D%98-%EB%85%B9%EC%83%89-%EC%9E%8E-%EC%8B%9D%EB%AC%BC-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+          >
+            Unsplash
+          </a>
+        </div>
+      </div>
+      <div class="sign-up-form"></div>
+    </div>
+  </body>
 </html>
