--- a/index.html
+++ b/index.html
@@ -28,7 +28,31 @@
           </a>
         </div>
       </div>
-      <div class="sign-up-form"></div>
+      <div class="content">
+        <div class="promotion">
+          <p>
+            This is not a real online service! You know you need something like
+            this in your life to help you realize your deepest dreams.
+            <br />
+            Sign up
+            <em>now</em>
+            to get started.
+          </p>
+          <p>
+            You
+            <em>know</em>
+            you want to.
+          </p>
+        </div>
+        <div class="sign-up-form">Let's do this!</div>
+        <div class="button-and-log-in">
+          <button>Create Account</button>
+          <p>
+            Already have an acount?
+            <a href="#">Log in</a>
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
